reduce syn features

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,9 @@ jobs:
           - --no-default-features --features prelude_core,prelude_2021
           - --no-default-features --features prelude_core
           - --features namespace_idents
+        include:
+          - rust: nightly
+            cargo_flags: -Z minimal-versions
 
     runs-on: ubuntu-latest
 
@@ -30,7 +33,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run:
-          cargo build ${{ matrix.features }}
+          cargo build ${{ matrix.features }} ${{ matrix.cargo_flags }}
       - name: Test
         run:
           cargo test ${{ matrix.features }} --all-targets --no-fail-fast
