--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ pretty_assertions = "1"
 proc-macro2 = "1"
 syn = "2"
 
+[workspace]
+members = ["quote-use-macros"]
+
 [package.metadata.release]
 shared-version = true
 
