--- a/quote-use-macros/Cargo.toml
+++ b/quote-use-macros/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 categories = [
-    "rust-patterns",
-    "development-tools::procedural-macro-helpers",
-    "parsing",
+  "rust-patterns",
+  "development-tools::procedural-macro-helpers",
+  "parsing",
 ]
 description = "Support `use` in procmacros hygienically"
 documentation = "https://docs.rs/quote-use"
@@ -20,16 +20,13 @@ proc-macro = true
 
 [dependencies]
 derive-where = "1"
+proc-macro-utils = "0.8"
 proc-macro2 = "1"
 quote = "1"
-syn = "2"
+syn = { version = "2", features = ["parsing"], default-features = false}
 
-[features]
-default = []
-prelude_core = []
-prelude_std = ["prelude_core"]
-prelude_2021 = ["prelude_core"]
-namespace_idents = []
+[dev-dependencies]
+pretty_assertions = "1.4"
 
 [package.metadata.release]
 shared-version = true
